--- a/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.RegistrarVariacionAnualCostos"
+﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.RegistrarTasaInteresFinanciamiento"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,15 +8,15 @@
         mc:Ignorable="d"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Title="Variación Anual de Costos | Negotium v1.0" Height="450" Width="400">
+        Title="Porcentaje Tasa Interés | Negotium v1.0" Height="450" Width="400">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="8.5*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <DataGrid CanUserSortColumns="False" SelectionUnit="Cell" Name="dgVariacionAnual"
-                ItemsSource="{Binding VariacionCostos, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+        <DataGrid CanUserSortColumns="False" SelectionUnit="Cell" Name="dgPorcentajes"
+                ItemsSource="{Binding TasaInteres, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 BorderThickness="1"
                 BorderBrush="{DynamicResource AccentColorBrush}"
                 AllowDrop="False" 
