--- a/UCR.Negotium/MainWindow.xaml
+++ b/UCR.Negotium/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Controls:MetroWindow x:Class="UCR.Negotium.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:switch="clr-namespace:UCR.Negotium.Utils"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UCR.Negotium"
@@ -72,10 +73,27 @@
                     <DataGridTextColumn
                     Binding="{Binding Path=Proponente.Organizacion.NombreOrganizacion}" Header="Organización" Width="3*"/>
                     <DataGridTextColumn
-                    Binding="{Binding Path=AnoInicial}" Header="Año Inicial" Width="3*"/>
+                    Binding="{Binding Path=AnoInicial}" Header="Año Inicial" Width="2*"/>
+                    <DataGridTemplateColumn Header="Estado" Width="2*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock>
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Text" Value="Activo" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Path=Archivado}" Value="true">
+                                                    <Setter Property="Text" Value="Archivado" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-
             <Grid Grid.Row="2" Grid.ColumnSpan="2">
                 <Button Width="40" Margin="30,0" Height="40" Name="btnCrear"
                         Click="btnCrear_Click"
