--- a/UCR.Negotium/UserControls/Financiamiento.xaml
+++ b/UCR.Negotium/UserControls/Financiamiento.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UCR.Negotium.UserControls"
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="1200">
 
@@ -17,7 +18,75 @@
         </Border>
         <Border Grid.Row="1" Style="{StaticResource borderStyle}">
             <Grid Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+                
+                <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="30,20">
+                    <Label Content="Monto a Financiar:"/>
+                    <TextBox Name="tbMonto" TextChanged="tbMonto_TextChanged" 
+                                         Text="{Binding FinanciamientoSelected.MontoFinanciamiento}" Margin="0,0,27,0"
+                                         ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
+                </StackPanel>
+                <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="1" Margin="10,20">
+                    <Label Content="Duración del Financiamiento (Años):"/>
+                    <ComboBox Margin="0,0,75,0" Width="180" ItemsSource="{Binding TiempoDisponible}"
+                                          SelectedValue="{Binding FinanciamientoSelected.TiempoFinanciamiento}" />
+                </StackPanel>
+                <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="2" Margin="10,20">
+                    <Label Content="Año Inicial del Pago:"/>
+                    <ComboBox Margin="0,0,75,0" Width="180" ItemsSource="{Binding AnosDisponibles}"
+                                          SelectedValue="{Binding FinanciamientoSelected.AnoInicialPago}" />
+                </StackPanel>
+                <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="10,20" Grid.Column="3">
+                    <Label Content="Monto con interés fijo:"/>
+                    <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                        <CheckBox FlowDirection="LeftToRight" Name="cbFijo" 
+                                              IsChecked="{Binding FinanciamientoSelected.InteresFijo}" 
+                                              Checked="cbFijo_Checked" Loaded="cbFijo_Loaded">
+                            <TextBlock Text="Si"/>
+                        </CheckBox>
+                        <CheckBox FlowDirection="LeftToRight" Name="cbVariable" Margin="10,0,0,0" Checked="cbVariable_Checked">
+                            <TextBlock Text="No"/>
+                        </CheckBox>
+                    </StackPanel>
+                </StackPanel>
+                <Grid Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Left">
+                    <iconPacks:PackIconModern Width="16" Height="16" Kind="EditAdd" Foreground="Teal"
+                                                  Margin="0,7,150,0" HorizontalAlignment="Right"/>
+                    <Label HorizontalAlignment="Left" Margin="20,0,0,0">
+                        <Hyperlink Name="lblTasaInteres" Click="lblTasaInteres_Click">Tasa de Interés</Hyperlink>
+                    </Label>
+                </Grid>
 
+                <DataGrid ItemsSource="{Binding DTCapitalTrabajo, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                          Margin="30,0,30,15" ColumnWidth="100" CanUserSortColumns="False"
+                          Grid.ColumnSpan="5" Grid.Row="1"
+                          Name="dgFinanciamiento" Loaded="dgFinanciamiento_Loaded">
+
+                </DataGrid>
+                <Grid Grid.Row="2" Grid.Column="4" Margin="0,0,30,0">
+                    <Button Style="{StaticResource saveButtonStyle}" Name="btnGuardar" Click="btnGuardar_Click">
+                        <Button.ContentTemplate >
+                            <DataTemplate DataType="MetroButton">
+                                <StackPanel Orientation="Horizontal">
+                                    <iconPacks:PackIconModern HorizontalAlignment="Left" Foreground="Teal" VerticalAlignment="Center" iconPacks:PackIconModern.Kind="Save"/>
+                                    <TextBlock Margin="10,0,0,0">Guardar</TextBlock>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Button.ContentTemplate>
+                    </Button>
+                </Grid>
             </Grid>
         </Border>
     </Grid>
